ingress/ingress-blog.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: default
spec:
  tls:
  - hosts:
    - my-blog.com
    secretName: my-tls-secret
  - hosts:
    - my-blog.api.com
    secretName: my-tls-secret
  rules:
  - host: my-blog.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: frontend-lb-service
            port:
              number: 80
  - host: my-blog.api.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: flaskapi-lb-service
            port:
              number: 8000
